Content. Fix productsTitle overflow for long words

--- a/src/components/productsView.scss
+++ b/src/components/productsView.scss
@@ -23,6 +23,7 @@
     width: 200px;
     > * + * {
       margin-top: 4px;
+      word-break: break-all;
     }
   }
   .productLink {
